new form multiple choice

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
               <label for="exampleInputEmail1">Search Term</label>
               <input type="string" class="form-control" id="search-term" aria-describedby="emailHelp" placeholder="Enter search term">
             </div>
-            <div id="numberRecords"class="form-group">
-              <label for="numberOfRecordsToRetrive">Number of Records to retrieve</label>
-              <input type="string" class="form-control" id="number-records" placeholder="how many?">
-            </div>
+            <select class="form-control form-control-lg">
+                <option>1</option>
+                <option>5</option>
+                <option>10</option>
+              </select>
             <div id="start-year"class="form-group">
                     <label for="startYear">Start Year</label>
                     <input type="strimg" class="form-control" id="startYear" placeholder="When to start?">
                   </div>
+
             <div id="end-year"class="form-group">
                     <label for="endYear">End Year</label>
                     <input type="string" class="form-control" id="endtYear" placeholder="When to end?">
@@ -35,6 +37,9 @@
             <button type="Search" id= "search" class="btn btn-primary">Search</button>  
             <button type="clear" id= "clear" class="btn btn-primary">Clear results</button>
           </form>
+</div>
+<div class="container">
+    
 </div>
   
 </body>
