--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">New York Times Search</a>
+    <a class="navbar-brand" href="#"><i class="fas fa-newspaper" ></i>New York Times Search</a>
 </nav>
 <div class="container">
     <form>
@@ -32,8 +32,8 @@
                     <label for="endYear">End Year</label>
                     <input type="string" class="form-control" id="endtYear" placeholder="When to end?">
                 </div>
-            <button type="Search" id= "search" class="btn btn-primary">Search</button>  
-            <button type="clear" id= "clear" class="btn btn-primary">Clear results</button>
+            <button type="Search" id= "search" class="btn btn-primary"> <i class="fas fa-search"></i> Search</button>  
+            <button type="clear" id= "clear" class="btn btn-primary"><i class="far fa-trash-alt"></i>Clear results</button>
           </form>
 </div>
   
