--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+   
     <title>New York Times Search</title>
 
 </head>
@@ -17,14 +20,15 @@
 <div class="container">
     <form>
             <div id="searchTerm" class="form-group">
-              <label for="exampleInputEmail1">Search Term</label>
+              <label for="exampleInputEmail1"> Search Term</label>
               <input type="string" class="form-control" id="search-term" aria-describedby="emailHelp" placeholder="Enter search term">
             </div>
             <select class="form-control form-control-lg">
                 <option>1</option>
                 <option>5</option>
                 <option>10</option>
-              </select>
+            </select>
+
             <div id="start-year"class="form-group">
                     <label for="startYear">Start Year</label>
                     <input type="strimg" class="form-control" id="startYear" placeholder="When to start?">
@@ -34,12 +38,15 @@
                     <label for="endYear">End Year</label>
                     <input type="string" class="form-control" id="endtYear" placeholder="When to end?">
                 </div>
+
             <button type="Search" id= "search" class="btn btn-primary"> <i class="fas fa-search"></i> Search</button>  
-            <button type="clear" id= "clear" class="btn btn-primary"><i class="far fa-trash-alt"></i>Clear results</button>
+            <button type="clear" id= "clear" class="btn btn-primary"><i class="far fa-trash-alt"></i> Clear results</button>
           </form>
 </div>
 <div class="container">
-    
+<p>
+    Top Articles
+</p>
 </div>
   
 </body>
