--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
    
-    <title>New York Times Search</title>
+    <title> New York Times Search</title>
 
 </head>
 <body>
@@ -42,12 +42,21 @@
             <button type="Search" id= "search" class="btn btn-primary"> <i class="fas fa-search"></i> Search</button>  
             <button type="clear" id= "clear" class="btn btn-primary"><i class="far fa-trash-alt"></i> Clear results</button>
           </form>
+
+          <div class="row">
+              <div class="col-12" id="topArt">
+                <p>
+                Top Articles
+                 </p>
+              </div>
+              <div class="col-12">
+                  <div>
+                <span id="topResutls"></span>
+                  </div>
+             </div>
 </div>
-<div class="container">
-<p>
-    Top Articles
-</p>
-</div>
+
+
   
 </body>
 </html>
