--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <title>New York Times Search</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -25,17 +25,19 @@
               <input type="string" class="form-control" id="number-records" placeholder="how many?">
             </div>
             <div id="start-year"class="form-group">
-                    <label for="startYear">Start Year</label>
-                    <input type="strimg" class="form-control" id="startYear" placeholder="When to start?">
+                    <label for="startYear">Start Year (Optional)</label>
+                    <input type="strimg" class="form-control" id="startYear" placeholder="yyyymmdd">
                   </div>
             <div id="end-year"class="form-group">
-                    <label for="endYear">End Year</label>
-                    <input type="string" class="form-control" id="endtYear" placeholder="When to end?">
+                    <label for="endYear">End Year (Optional)</label>
+                    <input type="string" class="form-control" id="endYear" placeholder="yyyymmdd">
                 </div>
             <button type="Search" id= "search" class="btn btn-primary">Search</button>  
             <button type="clear" id= "clear" class="btn btn-primary">Clear results</button>
           </form>
 </div>
-  
+
+<script src="assets/javascript/app.js"></script>
+
 </body>
 </html>
