lo hice mas bonito :)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <form>
             <div id="searchTerm" class="form-group">
-              <label for="exampleInputEmail1"> Search Term</label>
+              <label for="exampleInputEmail1" style= "font-size: 15px; color: rgb(2, 2, 68); "> Search Term</label>
               <input type="string" class="form-control" id="search-term" aria-describedby="emailHelp" placeholder="Enter search term">
             </div>
             <select class="form-control form-control-lg">
@@ -35,12 +35,12 @@
             </select>
 
             <div id="start-year"class="form-group">
-                    <label for="startYear">Start Year</label>
+                    <label for="startYear" style= "font-size: 15px; color: rgb(2, 2, 68); " >Start Year</label>
                     <input type="strimg" class="form-control" id="startYear" placeholder="When to start?">
                   </div>
 
             <div id="end-year"class="form-group">
-                    <label for="endYear">End Year</label>
+                    <label for="endYear" style= "font-size: 15px; color: rgb(2, 2, 68); " >End Year</label>
                     <input type="string" class="form-control" id="endtYear" placeholder="When to end?">
                 </div>
 
