It's working, but still can be styled a bit more

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <label for="exampleInputEmail1"> Search Term</label>
               <input type="string" class="form-control" id="search-term" aria-describedby="emailHelp" placeholder="Enter search term">
             </div>
-            <select class="form-control form-control-lg">
+            <select id="number" class="form-control form-control-lg">
                 <option>1</option>
                 <option>5</option>
                 <option>10</option>
@@ -49,24 +49,16 @@
           </form>
 
           <div class="row">
-              <div class="col-12" id="topArt">
-                <p>
-                Top Articles
-                 </p>
+              <div class="col-12 hide" id="topArt">
               </div>
               <div class="col-12">
                   <div>
-                <span id="topResutls"></span>
+                <span id="topResults"></span>
                   </div>
              </div>
 </div>
 
-<<<<<<< HEAD
 <script src="assets/javascript/app.js"></script>
 
-=======
-
-  
->>>>>>> eaaf07030e5cb2be9c449322c0c06faf3b227108
 </body>
 </html>
